--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
          <ul>
             
             <li><a href=" ./Links for learning.html">Links For Learning</a></li>
-            <li><a href=" ./Jump around.html">Jump Arounf</a></li>
+            <li><a href=" ./Jump around.html">Jump Around</a></li>
             <li><a href=" ./The dinner table.html">Dinner Table</a></li>
             <li><a href=" ./Recipe book.html">Recipe Book</a></li>
          
