--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             background-color: lightblue;
         }   
    
+   h2 {
+            background-color: lightgray;
+        }    
+      
    </style>
       
    </head>        
