--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         }   
            
    h2 {
-            color: pink;
+            color: lightgray;
         }
 
    ul {
@@ -21,7 +21,7 @@
         }   
    
    h2 {
-            background-color: lightgray;
+            background-color: pink;
         }    
       
    </style>
